<resources>
    <string name="app_name">CriminalIntent</string>
    <!-- CrimeFragment界面 -->
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="delete_crime">Delete Crime</string>
    <!-- 缩略图对话框标题 -->
    <string name="picture_title">Crime picture details.</string>
    <!-- 日期对话框标题 -->
    <string name="date_picker_title">Date of crime.</string>
    <!-- 打开选取嫌疑人应用、打开发送消息的应用 -->
    <string name="crime_suspect_text">CHOOSE SUSPECT</string>
    <string name="crime_report_text">SEND CRIME REPORT</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <!-- 用于拼接短信内容的字符串资源 -->
    <string name="crime_report_solved">The case is solved.</string>
    <string name="crime_report_unsolved">The case is not solved.</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report.</string>
    <string name="send_report">Send crime report via</string>
    <!-- 打开拨打电话的应用 -->
    <string name="crime_suspect_call_text">CALL SUSPECT</string>
    <!-- CrimeListFragment界面 -->
    <!-- 菜单及菜单项所需的字符串资源 -->
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="new_crime_hint">Click Add!</string>
    <!-- 量化字符串 - 子标题区分显示crime数量
         https://blog.csdn.net/teagreen_red/article/details/78269950
    -->
    <plurals name="subtitle_plurals">
        <item quantity="other">%1$s 个</item>
    </plurals>
</resources>
