<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
        style="?android:listSeparatorTextViewStyle"
        让屏幕上的TextView组件看起来是以列表样式分隔开的

        使用主题属性引用:
            就是告诉Android运行资源管理器,在应用主题里找到名为listSeparatorTextViewStyle的属性
            该属性指向其他样式资源,请将其他资源的值放在这里;

        使用主题属性引用,可以确保组件在应用中拥有正确一致的显示风格

        边距无法缩放适配或者用户配置了大于默认值的文字大小,会发生什么将会是接下来的问题
        解决方案:使用密度无关的尺寸单位,来在不同屏幕像素密度的设备上获得同样的尺寸;应用运行时Android会自动将其转换为对应的像素值;

        dp:在设置边距、内边距以及任何不打算按像素值指定尺寸的情况下使用;
        sp:在设置屏幕上的字体大小时使用,但其会受用户字体偏好设置的影响;
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/crime_title_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle"/>
    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_solved_label"/>
    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_suspect_text"/>
    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_report_text"/>
    <Button
        android:id="@+id/crime_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_suspect_call_text"/>
</LinearLayout>